--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="https://cdn.freebiesupply.com/logos/large/2x/v2-music-logo-png-transparent.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn.freebiesupply.com/logos/large/2x/v2-music-logo-png-transparent.png"
+        type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap">
     <style>
@@ -48,6 +49,11 @@
             text-align: center;
             background-color: #fff;
             border-radius: 10px;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur(13.5px);
+            -webkit-backdrop-filter: blur(13.5px);
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.18);
         }
 
         .h3,
@@ -76,6 +82,11 @@
             /* Removendo sublinhado padrão */
             display: block;
             margin-top: 10px;
+            box-shadow: 2px 4px 0px 0px rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur(13.5px);
+            -webkit-backdrop-filter: blur(13.5px);
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.18);
         }
 
         .custom-button:hover {
