--- a/index.html
+++ b/index.html
@@ -92,11 +92,25 @@
         .custom-button:hover {
             background-color: #0056b3;
         }
+
+        .maxx-title {
+            font-family: 'Sora', sans-serif;
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: #ff6702; /* Cor azul do Bootstrap */
+            text-align: center;
+            margin: 20px 0 0 20px; /* Ajuste a margem conforme necessário */
+            position: fixed; /* Torna o título fixo na tela */
+            top: 0; /* Alinha o topo do título com o topo da tela */
+            left: 0; /* Alinha a borda esquerda do título com a borda esquerda da tela */
+        }
+
     </style>
     <title>Lista Flex com Box Shadow</title>
 </head>
 
 <body>
+    <h1 class="maxx-title"><i class='bx bx-wifi wifi-icon'></i>MAXX 2.0</h1>
 
     <div class="flex-container">
         <div class="list-box">
