--- a/recolhas.html
+++ b/recolhas.html
@@ -23,11 +23,9 @@
         body {
             background-color: #e8e8e8;
             background-image: url('/imagens/MAXX.png');
-            /* Substitua 'URL_DA_SUA_IMAGEM' pela URL da sua imagem de fundo */
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            /* Isso faz com que a imagem de fundo seja fixada na tela */
             background-position: center;
         }
 
@@ -40,7 +38,6 @@
         @media print {
             body * {
                 visibility: hidden;
-
             }
 
             #impressao,
@@ -54,7 +51,6 @@
                 left: 0;
                 top: 0;
                 background-color: #fff;
-                /* Cor de fundo branco para melhorar a impressão */
                 padding: 20px;
                 font-family: 'Sora', sans-serif;
             }
@@ -62,7 +58,6 @@
             .table th,
             .table td {
                 border: 1px solid #000;
-                /* Bordas sólidas para melhorar a visualização na impressão */
                 text-align: center;
                 font-family: 'Sora', sans-serif;
             }
@@ -74,23 +69,22 @@
             }
         }
 
-         /* Estilo para o ícone de voltar ao menu */
-         #back-to-menu {
+        #back-to-menu {
             position: fixed;
             top: 20px;
             left: 20px;
             font-size: 30px;
-            color: #007bff; /* Cor azul do Bootstrap */
+            color: #007bff;
             cursor: pointer;
-            text-decoration: none; /* Remova o sublinhado padrão do link */
-            z-index: 999; /* Garante que o ícone esteja acima de outros elementos */
+            text-decoration: none;
+            z-index: 999;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="container mt-5"> <!-- Adição da caixa de pesquisa -->
+    <div class="container mt-5">
         <div class="row mb-3">
             <div class="col-md-4 offset-md-8">
                 <input type="text" class="form-control" placeholder="Filtrar por MAC" id="searchMacInput"
@@ -107,30 +101,25 @@
             });
         </script>
 
-        <!-- Material Form -->
         <form>
             <div class="row mb-3">
                 <div class="col-md-4">
                     <select class="form-select" aria-label="Material" id="materialSelect">
-
                         <option value="NOKIA">NOKIA</option>
-                        <option value="FIBERHOME - 3D">FIBERHOME COM ANTENA</option>
-                        <option value="FIBERHOME - D3">FIBERHOME SEM ANTENA</option>
+                        <option value="HG6143D">HG6143D</option>
+                        <option value="HG6143D3">HG6143D3</option>
                         <option value="FIBERHOME - BRANCA">FIBERHOME 2.4</option>
                         <option value="CABLE - MOLDEM">CABLE MOLDEM</option>
-                        <option value="CAIXA - TV">CAIXA TV</option>
+                        <option value="CAIXA - DIGITAL">CAIXA TV</option>
                         <option value="IPTV">IPTV</option>
                         <option value="OTT - BOX">OTT BOX</option>
                         <option value="OUTRO - MODELO">OUTRO MODELO</option>
-
-
                     </select>
                 </div>
                 <div class="col-md-4">
                     <input type="text" class="form-control" placeholder="Endereço MAC" id="macInput"
                         onkeydown="if (event.keyCode === 13) { event.preventDefault(); adicionarMaterial(); }"
                         oninput="this.value = this.value.toUpperCase();">
-                    <!-- Adicionando o evento oninput para converter para maiúsculas -->
                 </div>
                 <div class="col-md-4">
                     <button type="button" class="btn btn-primary" onclick="adicionarMaterial()">Adicionar</button>
@@ -138,7 +127,6 @@
             </div>
         </form>
 
-        <!-- Material List -->
         <div class="table-responsive">
             <table class="table">
                 <thead>
@@ -149,24 +137,20 @@
                     </tr>
                 </thead>
                 <tbody id="materialTableBody">
-                    <!-- Aqui será adicionada dinamicamente a lista de materiais -->
                 </tbody>
             </table>
         </div>
 
-        <!-- Total de Materiais -->
         <div class="total-container">
             <p class="total-label">Total de Materiais:</p>
             <span class="total-number" id="totalMateriais">0</span>
         </div>
 
-        <!-- Técnico Form -->
         <form class="mt-4">
             <div class="row mb-3">
                 <div class="col-md-8">
                     <input type="text" class="form-control" placeholder="Nome do Técnico" id="tecnicoInput"
                         oninput="this.value = this.value.toUpperCase();">
-                    <!-- Adicionando o evento oninput para converter para maiúsculas -->
                 </div>
                 <div class="col-md-4">
                     <button type="button" class="btn btn-success" onclick="imprimirLista()">
@@ -176,7 +160,6 @@
             </div>
         </form>
 
-        <!-- Área para Impressão -->
         <div id="impressao" class="d-none">
             <img src="https://media.licdn.com/dms/image/D4D16AQFdNZZsOlKrzw/profile-displaybackgroundimage-shrink_200_800/0/1681353103958?e=2147483647&v=beta&t=1-yGkc1xYzD5wJMeLd3JK7wCFpcS_nlf8zbEZa9k0KE"
                 alt="Logo da Empresa" class="mb-3">
@@ -186,11 +169,10 @@
                     <tr>
                         <th>Material</th>
                         <th>Endereço MAC</th>
-                        <th>Ações</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
                 <tbody id="impressaoTableBody">
-                    <!-- Aqui será adicionada dinamicamente a lista de materiais para impressão -->
                 </tbody>
             </table>
             <p>Total de Materiais: <span id="impressaoTotalMateriais">0</span></p>
@@ -207,35 +189,42 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        var listaMateriais = []; // Array para manter a lista de materiais adicionados
+        var listaMateriais = [];
 
         function adicionarMaterial() {
             var materialSelect = document.getElementById("materialSelect");
             var macInput = document.getElementById("macInput");
             var material = materialSelect.value;
-            var mac = macInput.value;
+            var mac = macInput.value.toUpperCase();
 
-            // Adicionar o novo item à lista
+            if (listaMateriais.some(item => item.mac === mac)) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Erro',
+                    text: 'Este endereço MAC já foi adicionado.',
+                });
+                return;
+            }
+
             listaMateriais.push({ material: material, mac: mac, contagem: 1 });
-
-            // Atualizar a tabela de materiais
             atualizarTabela();
-
-            // Atualizar o total de materiais
             atualizarTotalMateriais();
-
-            // Limpar campos após adicionar
-            materialSelect.selectedIndex = 0;
             macInput.value = '';
+
+            Swal.fire({
+                icon: 'success',
+                title: 'Sucesso',
+                text: 'Item adicionado com sucesso.',
+            });
         }
 
         function atualizarTabela() {
             var materialTableBody = document.getElementById("materialTableBody");
             materialTableBody.innerHTML = '';
 
-            // Percorrer a lista de materiais e atualizar a tabela
             listaMateriais.forEach(function (item, index) {
                 var newRow = materialTableBody.insertRow();
                 var cellMaterial = newRow.insertCell(0);
@@ -245,7 +234,6 @@
                 cellMaterial.innerHTML = item.material;
                 cellMAC.innerHTML = item.mac;
 
-                // Adicionar botão de exclusão
                 var btnExcluir = document.createElement("button");
                 btnExcluir.type = "button";
                 btnExcluir.className = "btn btn-danger btn-sm";
@@ -272,37 +260,30 @@
             var tecnicoInput = document.getElementById("tecnicoInput");
             var selectedTecnico = tecnicoInput.value;
 
-            // Atualizar a tabela de impressão
             var impressaoTableBody = document.getElementById("impressaoTableBody");
             impressaoTableBody.innerHTML = '';
+
             listaMateriais.forEach(function (item) {
                 var newRow = impressaoTableBody.insertRow();
                 var cellMaterial = newRow.insertCell(0);
                 var cellMAC = newRow.insertCell(1);
-                var cellAcoes = newRow.insertCell(2);
+                var cellStatus = newRow.insertCell(2);
                 cellMaterial.innerHTML = item.material;
                 cellMAC.innerHTML = item.mac;
-
-                // Adicionar botão de exclusão (não necessário na impressão)
-                cellAcoes.innerHTML = '';
+                cellStatus.innerHTML = 'Recolhido';
             });
 
-            // Atualizar o total de materiais para impressão
             var impressaoTotalMateriais = document.getElementById("impressaoTotalMateriais");
             impressaoTotalMateriais.innerHTML = listaMateriais.length;
 
-            // Atualizar o nome do técnico para impressão
             var impressaoTecnico = document.getElementById("impressaoTecnico");
             impressaoTecnico.innerHTML = selectedTecnico;
 
-            // Exibir área de impressão
             var impressaoDiv = document.getElementById("impressao");
             impressaoDiv.classList.remove("d-none");
 
-            // Imprimir
             window.print();
 
-            // Ocultar área de impressão após imprimir
             impressaoDiv.classList.add("d-none");
         }
 
@@ -314,7 +295,7 @@
             tr = table.getElementsByTagName("tr");
 
             for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[1]; // A segunda célula contém o endereço MAC
+                td = tr[i].getElementsByTagName("td")[1];
                 if (td) {
                     txtValue = td.textContent || td.innerText;
                     if (txtValue.toUpperCase().indexOf(filter) > -1) {
