--- a/recolhas.html
+++ b/recolhas.html
@@ -109,7 +109,7 @@
                         <option value="HG6143D">HG6143D</option>
                         <option value="HG6143D3">HG6143D3</option>
                         <option value="FIBERHOME - BRANCA">FIBERHOME 2.4</option>
-                        <option value="CABLE - MOLDEM">CABLE MOLDEM</option>
+                        <option value="CABLE - MODEM">CABLE MODEM</option>
                         <option value="CAIXA - DIGITAL">CAIXA TV</option>
                         <option value="IPTV">IPTV</option>
                         <option value="OTT - BOX">OTT BOX</option>
