--- a/recolhas.html
+++ b/recolhas.html
@@ -112,7 +112,7 @@
                         <option value="CABLE - MODEM">CABLE MODEM</option>
                         <option value="CAIXA - DIGITAL">CAIXA TV</option>
                         <option value="IPTV">IPTV</option>
-                        <option value="OTT - BOX">OTT BOX</option>
+                        <option value="SMARTCARD">SMARTCARD</option>
                         <option value="OUTRO - MODELO">OUTRO MODELO</option>
                     </select>
                 </div>
