--- a/recolhas.html
+++ b/recolhas.html
@@ -192,7 +192,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="/js/print.js"></script>
+    <script src="/print.js"></script>
     <script>
         var listaMateriais = [];
 
