--- a/recolhas.html
+++ b/recolhas.html
@@ -31,7 +31,7 @@
 
         .table th,
         .table td {
-            border: 1px solid #dee2e6;
+            border: 1px solid #6c757d;
             text-align: center;
         }
 
