--- a/recolhas.html
+++ b/recolhas.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
 
     <link rel="stylesheet" href="/css/recolha.css">
-    <link rel="shortcut icon" href="https://cdn.freebiesupply.com/logos/large/2x/v2-music-logo-png-transparent.png"
+    <link rel="shortcut icon" href="https://i.postimg.cc/Hxn0TxQq/2-0.png"
         type="image/x-icon">
     <style>
         body {
