--- a/recolhas.html
+++ b/recolhas.html
@@ -186,32 +186,51 @@
     <script>
         var listaMateriais = [];
 
-        function adicionarMaterial() {
-            var materialSelect = document.getElementById("materialSelect");
-            var macInput = document.getElementById("macInput");
-            var material = materialSelect.value;
-            var mac = macInput.value.toUpperCase();
+        var listaMateriais = [];
 
-            if (!mac) {
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Erro',
-                    html: 'O campo "Endereço MAC" é obrigatório.',
-                    customClass: {
-                        confirmButton: 'btn btn-danger'
-                    }
-                });
-                return;
-            }
+    function adicionarMaterial() {
+        var materialSelect = document.getElementById("materialSelect");
+        var macInput = document.getElementById("macInput");
+        var material = materialSelect.value;
+        var mac = macInput.value.toUpperCase();
 
-            if (listaMateriais.some(item => item.mac === mac)) {
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Erro',
-                    text: 'Este endereço MAC já foi adicionado.',
-                });
-                return;
-            }
+        if (!mac) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Erro',
+                html: 'O campo "Endereço MAC" é obrigatório.',
+                customClass: {
+                    confirmButton: 'btn btn-danger'
+                }
+            });
+            return;
+        }
+
+        if (listaMateriais.some(item => item.mac === mac)) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Erro',
+                text: 'Este endereço MAC já foi adicionado.',
+            });
+            return;
+        }
+
+        listaMateriais.push({
+            material: material,
+            mac: mac,
+            contagem: 1
+        });
+        atualizarTabela();
+        atualizarTotalMateriais();
+        macInput.value = '';
+
+        Swal.fire({
+            icon: 'success',
+            title: 'Sucesso',
+            text: 'Item adicionado com sucesso.',
+            showConfirmButton: false // Remove o botão "OK"
+        });
+    }
 
             listaMateriais.push({
                 material: material,
