--- a/recolhas.html
+++ b/recolhas.html
@@ -2,77 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>MAXX 2.0</title>
+    <title>Maxx Collect</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ================================ BOOSTRAP 5 =======================================-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <!-- ================================ FONTE SORA =======================================-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sora&display=swap">
+    <!-- ================================ FONTE AWERSOME ===================================-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         crossorigin="anonymous">
-
+    <!-- ================================ ARQUIVOS CSS  ====================================-->
     <link rel="stylesheet" href="/css/recolha.css">
-    <link rel="shortcut icon" href="https://i.postimg.cc/Hxn0TxQq/2-0.png" type="image/x-icon">
-    <style>
-        body {
-            font-family: 'Sora', sans-serif;
-            background-color: #e2e1eb;
-        }
-
-        #btn {
-            position: relative;
-            left: 1px;
-        }
-
-        html,
-        body {
-            background-color: #e8e8e8;
-            background-image: url('/imagens/MAXX.png');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-        }
-
-        .table th,
-        .table td {
-            border: 1px solid #6c757d;
-            text-align: center;
-        }
-
-        @media print {
-            body * {
-                visibility: hidden;
-            }
-
-            #impressao,
-            #impressao * {
-                visibility: visible;
-                font-family: 'Sora', sans-serif;
-            }
-
-            #impressao {
-                position: absolute;
-                left: 0;
-                top: 0;
-                background-color: #fff;
-                padding: 20px;
-                font-family: 'Sora', sans-serif;
-            }
-
-            .table th,
-            .table td {
-                border: 1px solid #000;
-                text-align: center;
-                font-family: 'Sora', sans-serif;
-            }
-
-            #impressao img {
-                max-width: 100%;
-                height: auto;
-                margin-bottom: 20px;
-            }
-        }
-    </style>
+    <!-- ================================  FAVICON      ====================================-->
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/10861/10861982.png" type="image/x-icon" >
 </head>
 
 <body>
@@ -94,7 +37,8 @@
                 </button>
             </div>
         </div>
-        <h1 class="mb-4">Recolhimento - Maxx</h1>
+        <h1 class="mb-4"> <i class="fas fa-box"></i>
+            MAXX COLLECT</h1>
 
 
         <script>
@@ -128,7 +72,7 @@
                 </div>
             </div>
         </form>
-
+        <!--==================== PARTE DA TABELA =====================-->
         <div class="table-responsive">
             <table class="table">
                 <thead>
@@ -142,16 +86,16 @@
                 </tbody>
             </table>
         </div>
-
+        <!--==================== PARTE DA QUANTIDADE =====================-->
         <div class="total-container">
             <p class="total-label">Total de Materiais:</p>
             <span class="total-number" id="totalMateriais">0</span>
         </div>
-
+        <!--==================== PARTE DA IMPRESSÃO =====================-->
         <div id="impressao" class="d-none">
             <img src="https://media.licdn.com/dms/image/D4D16AQFdNZZsOlKrzw/profile-displaybackgroundimage-shrink_200_800/0/1681353103958?e=2147483647&v=beta&t=1-yGkc1xYzD5wJMeLd3JK7wCFpcS_nlf8zbEZa9k0KE"
                 alt="Logo da Empresa" class="mb-3">
-            <h2 class="mb-4">Lista de Equipamentos Recolhidos</h2>
+            <h2 class="mb-4">Equipamentos Recolhidos</h2>
             <table class="table">
                 <thead>
                     <tr>
@@ -166,17 +110,30 @@
             <p>Total de Materiais: <span id="impressaoTotalMateriais">0</span></p>
             <div class="row mt-4">
                 <div class="col-md-6">
-                    <p>Nome do Técnico: <span id="impressaoTecnico"></span></p>
+                    <p><span id="impressaoTecnico"></span></p>
                     <div class="col-md-6">
                         <p>_____________________________</p>
                         <p>Almoxarifado</p>
                     </div>
                     <p>_____________________________</p>
+                    <!-- Adicione este parágrafo na seção de impressão -->
+                    <p id="impressaoDateTime"></p>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Direitos autorais -->
+    <!-- 
+    *****************************************************
+    *                                                   *
+    *    © 2024 Vanrley Macedo. Todos os direitos      *
+    *    reservados.                                    *
+    *                                                   *
+    *****************************************************
+    -->
+    
+    <!--==================== PARTE DOS SCRIPTS =====================-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -251,7 +208,8 @@
                 var btnExcluir = document.createElement("button");
                 btnExcluir.type = "button";
                 btnExcluir.className = "btn btn-danger btn-sm";
-                btnExcluir.innerHTML = "Excluir";
+                // Adicionando o ícone de delete no botão
+                btnExcluir.innerHTML = '<i class="fas fa-trash"></i>';
                 btnExcluir.addEventListener("click", function () {
                     removerMaterial(index);
                 });
@@ -291,6 +249,10 @@
             impressaoDiv.find("#impressaoTotalMateriais").html(listaMateriais.length);
             impressaoDiv.find("#impressaoTecnico").html(selectedTecnico);
 
+            // Adicione a data e hora atual
+            var dateTime = new Date().toLocaleString();
+            impressaoDiv.find("#impressaoDateTime").html("Data e Hora da Impressão: " + dateTime);
+
             impressaoDiv.removeClass("d-none");
 
             impressaoDiv.printThis({
@@ -298,7 +260,6 @@
                 importStyle: true,
             });
         }
-
         // Função para limpar tudo
         function limparTudo() {
             listaMateriais = [];
